fix portfolio on mobile

--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -24,8 +24,9 @@
     // padding-top: 90px;
     @include Mobile {
       h1 {
-        margin-top: 120px;
-        font-size: 38px;
+        margin-top: 135px;
+        font-size: 28px;
+        letter-spacing: 1.2px;
       }
     }
   }
@@ -44,6 +45,7 @@
     @include Mobile {
       font-size: 28px;
       color: #fff;
+      display: none;
     }
     &.left {
       left: 2%;
@@ -100,10 +102,6 @@
     @include Mobile {
       top: 150px;
       height: 70%;
-
-      // flex-direction: column;
-      margin-top: 30px;
-      margin-bottom: 60px;
     }
 
     .container {
